feat: apply printing annotation from ppx_deriving

--- a/lib/dune
+++ b/lib/dune
@@ -2,10 +2,7 @@
  (name simpler)
  (libraries core)
  (preprocess
-  (pps
-    ppx_deriving.show
-    ppx_deriving.ord
-    ppx_deriving.eq)))
+  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
 
 (menhir
  (modules parser))
